[package]
name = "stellar-dapp"
version = "0.1.0"
description = "A Soroban smart contract dApp monorepo"
edition = "2021"

[workspace]
members = ["contracts/*"]

[workspace.dependencies]
soroban-sdk = "20.0.0"
soroban-env-id = "20.0.0"
stellar-xdr = { version = "3.0.0", features = ["wrap"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1